--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +35,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Units</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Make</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>East Texas Trailers</th>\n",
+       "      <td>505</td>\n",
+       "      <td>5579392.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Big Tex</th>\n",
+       "      <td>344</td>\n",
+       "      <td>3248569.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Liberty Industries Inc.</th>\n",
+       "      <td>138</td>\n",
+       "      <td>706385.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quality Cargo Trailers</th>\n",
+       "      <td>127</td>\n",
+       "      <td>1132383.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TrailMax</th>\n",
+       "      <td>123</td>\n",
+       "      <td>2111701.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>REPO East Texas</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2995.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DIAMOND CARGO</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STEALTH TITAN</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stealth Titan</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Steel Pines x</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>90 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Units       Price\n",
+       "Make                                      \n",
+       "East Texas Trailers        505  5579392.30\n",
+       "Big Tex                    344  3248569.16\n",
+       "Liberty Industries Inc.    138   706385.55\n",
+       "Quality Cargo Trailers     127  1132383.10\n",
+       "TrailMax                   123  2111701.28\n",
+       "...                        ...         ...\n",
+       "REPO East Texas              1     2995.00\n",
+       "DIAMOND CARGO                1        0.00\n",
+       "STEALTH TITAN                1        0.00\n",
+       "Stealth Titan                1        0.00\n",
+       "Steel Pines x                1        0.00\n",
+       "\n",
+       "[90 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -51,19 +165,11 @@
     "    .sort_values(by=[\"Units\", \"Price\"], ascending=False)\n",
     ")\n",
     "\n",
+    "aggregation\n",
+    "\n",
     "# Save the new aggregation to a CSV file\n",
-    "aggregation.to_csv(\"output_without_numbers.csv\")"
+    "# aggregation.to_csv(\"output_without_numbers.csv\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -82,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
